modified predict fns for shareable mdls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,10 @@ export(plot_lnr_cmprsn)
 export(plot_obsd_predd_dnst)
 export(plot_obsd_predd_sctr_cmprsn)
 export(plot_sctr_plt_cmprsn)
+export(predict_from_shareable_mdl)
+export(predict_shrble_betareg)
+export(predict_shrble_glm)
+export(predict_shrble_lm)
 export(predict_uncnstrd_utl)
 export(predict_utility)
 export(predict_utl_from_k10)
@@ -98,7 +102,6 @@ export(transform_tbl_to_rnd_vars)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
 export(write_box_cox_tfmn)
-export(write_brm_model_plts)
 export(write_main_oupt_dir)
 export(write_mdl_cmprsn)
 export(write_mdl_plts)
@@ -122,6 +125,7 @@ export(write_sngl_predr_multi_mdls_outps)
 export(write_study_outp_ds)
 export(write_to_delete_ds_copies)
 export(write_to_delete_mdl_fls)
+export(write_ts_mdl_plts)
 export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
 import(methods)
@@ -239,6 +243,7 @@ importFrom(stats,BIC)
 importFrom(stats,as.formula)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
+importFrom(stats,qr.lm)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,setNames)
