reformed main models report

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(scramble_xx)
 export(transform_chr_digit_pairs)
 export(transform_data_tb_for_cmprsn)
 export(transform_depnt_var_nm)
+export(transform_ds_for_all_cmprsn_plts)
 export(transform_ds_for_mdlng)
 export(transform_mdl_vars_with_clss)
 export(transform_params_ls_from_lup)
@@ -234,6 +235,7 @@ importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4use,get_fl_id_from_dv_ls)
 importFrom(ready4use,make_pt_ready4_dictionary)
+importFrom(ready4use,remove_labels_from_ds)
 importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
 importFrom(rlang,sym)
