more fixes of ds upload naming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,6 +100,7 @@ export(transform_predr_nm_part_of_phrases)
 export(transform_rprt_lup)
 export(transform_tb_to_mdl_inp)
 export(transform_tbl_to_rnd_vars)
+export(transform_timepoint_vals)
 export(transform_ts_mdl_data)
 export(validate_TTU_predictors_lup)
 export(write_box_cox_tfmn)
