--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,16 @@ export(add_prefd_predr_var_to_mdl_smry_ls)
 export(add_tfmd_var_to_ds)
 export(add_uids_to_tbs_ls)
 export(add_utility_predn_to_ds)
+export(add_utl_predn_to_new_ds)
 export(calculate_dpnt_var_tfmn)
 export(calculate_rmse)
 export(fit_ts_model_with_brm)
 export(get_cndts_for_mxd_mdls)
 export(get_link_from_tfmn)
+export(get_mdl_type_from_nm)
 export(get_random_intercept)
 export(get_signft_covars)
+export(get_table_predn_mdl)
 export(is_TTU_predictors_lup)
 export(knit_mdl_rprt)
 export(make_analysis_core_params_ls)
@@ -83,6 +86,7 @@ export(predict_utl_from_k10)
 export(print_all_plts_for_mdl_set)
 export(print_ts_mdl_plts)
 export(randomise_changes_in_fct_levs)
+export(rename_from_nmd_vec)
 export(reorder_cndt_predrs_chr)
 export(reorder_tbs_for_target_cors)
 export(scramble_xx)
@@ -91,6 +95,7 @@ export(transform_data_tb_for_cmprsn)
 export(transform_depnt_var_nm)
 export(transform_ds_for_all_cmprsn_plts)
 export(transform_ds_for_mdlng)
+export(transform_ds_to_predn_ds)
 export(transform_mdl_vars_with_clss)
 export(transform_params_ls_from_lup)
 export(transform_params_ls_to_valid)
@@ -214,6 +219,7 @@ importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
 importFrom(purrr,map2_dbl)
+importFrom(purrr,map2_dfr)
 importFrom(purrr,map2_int)
 importFrom(purrr,map_chr)
 importFrom(purrr,map_dbl)
