working through fix of study ds creation fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,7 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
@@ -232,6 +233,7 @@ importFrom(purrr,pmap)
 importFrom(purrr,pwalk)
 importFrom(purrr,reduce)
 importFrom(purrr,walk)
+importFrom(purrr,walk2)
 importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4class,update_pt_fn_args_ls)
