--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(make_tfd_sngl_predr_mdls_tb)
 export(make_tfmn_cmprsn_plt)
 export(make_ttu_cs_ls)
 export(make_two_mdl_types_smry_tbl)
+export(make_uid_rename_lup)
 export(make_unique_ls_elmt_idx_int)
 export(make_valid_params_ls_ls)
 export(plot_auto_lm)
@@ -107,6 +108,7 @@ export(transform_tb_to_mdl_inp)
 export(transform_tbl_to_rnd_vars)
 export(transform_timepoint_vals)
 export(transform_ts_mdl_data)
+export(transform_uid_var)
 export(validate_TTU_predictors_lup)
 export(write_box_cox_tfmn)
 export(write_main_oupt_dir)
@@ -214,6 +216,7 @@ importFrom(psych,logit)
 importFrom(purrr,discard)
 importFrom(purrr,flatten)
 importFrom(purrr,flatten_chr)
+importFrom(purrr,flatten_dbl)
 importFrom(purrr,flatten_dfr)
 importFrom(purrr,flatten_int)
 importFrom(purrr,map)
