more scndry analysis fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,9 +94,11 @@ export(scramble_xx)
 export(transform_chr_digit_pairs)
 export(transform_data_tb_for_cmprsn)
 export(transform_depnt_var_nm)
+export(transform_dict_with_rename_lup)
 export(transform_ds_for_all_cmprsn_plts)
 export(transform_ds_for_mdlng)
 export(transform_ds_to_predn_ds)
+export(transform_ds_with_rename_lup)
 export(transform_mdl_vars_with_clss)
 export(transform_params_ls_from_lup)
 export(transform_params_ls_to_valid)
