--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
 export(make_cmpst_sctr_and_dnsty_plt)
 export(make_cohort_ls)
+export(make_cs_ts_ratios_tb)
 export(make_ds_descvs_ls)
 export(make_ds_smry_ls)
 export(make_eq5d_ds_dict)
@@ -48,6 +49,7 @@ export(make_output_format_ls)
 export(make_path_params_ls)
 export(make_paths_to_ss_plts_ls)
 export(make_predn_ds_with_one_predr)
+export(make_predr_ctgs_ls)
 export(make_predr_vals)
 export(make_predr_vars_nms_ls)
 export(make_predrs_for_best_mdls)
