--- a/NAMESPACE
+++ b/NAMESPACE
@@ -277,6 +277,7 @@ importFrom(stringr,str_remove)
 importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
+importFrom(stringr,str_squish)
 importFrom(stringr,str_sub)
 importFrom(stringr,word)
 importFrom(synthpop,syn)
