--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9279
+Version: 0.0.0.9280
 Authors@R: 
     c(person(given = "Caroline",
              family = "Gao",
@@ -70,6 +70,7 @@ Imports:
     ready4show (>= 0.0.0.9035),
     ready4use (>= 0.0.0.9133),
     rlang,
+    rmarkdown,
     stats,
     stringi,
     stringr,
@@ -92,5 +93,3 @@ Remotes:
     iqss/dataverse-client-r,
     ready4-dev/ready4class,
     ready4-dev/ready4fun
-Suggests: 
-    rmarkdown
