changes for preprint submission

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ export(transform_uid_var)
 export(validate_TTU_predictors_lup)
 export(write_box_cox_tfmn)
 export(write_main_oupt_dir)
+export(write_manuscript)
 export(write_mdl_cmprsn)
 export(write_mdl_plts)
 export(write_mdl_smry_rprt)
@@ -256,6 +257,7 @@ importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(rmarkdown,render)
 importFrom(stats,AIC)
 importFrom(stats,BIC)
 importFrom(stats,as.formula)
