fixes for results ls

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(make_hlth_utl_and_predrs_ls)
 export(make_knit_pars_ls)
 export(make_maui_params_ls)
 export(make_mdl)
+export(make_mdl_coef_range_text)
 export(make_mdl_coef_ratio_ls)
 export(make_mdl_desc_lines)
 export(make_mdl_nms_ls)
