migrated fns from manuscript prog

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,15 @@ export(add_utl_predn_to_new_ds)
 export(calculate_dpnt_var_tfmn)
 export(calculate_rmse)
 export(fit_ts_model_with_brm)
+export(get_background_text)
 export(get_cndts_for_mxd_mdls)
+export(get_conclusion_text)
 export(get_covar_ctgs)
 export(get_covars_by_ctg)
 export(get_hlth_utl_nm)
 export(get_hlth_utl_stat)
 export(get_link_from_tfmn)
+export(get_lngl_ttu_types)
 export(get_mdl_cmprsns)
 export(get_mdl_type_from_nm)
 export(get_mdls_with_signft_covars)
@@ -32,25 +35,33 @@ export(get_signft_covars)
 export(get_table_predn_mdl)
 export(is_TTU_predictors_lup)
 export(knit_mdl_rprt)
+export(make_all_mdl_types_smry_tbl)
 export(make_analysis_core_params_ls)
 export(make_analysis_ds_smry_ls)
 export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
 export(make_cmpst_sctr_and_dnsty_plt)
+export(make_cndt_predr_text)
 export(make_cohort_ls)
+export(make_coi_text)
 export(make_correlation_text)
 export(make_covariates_text)
 export(make_cs_ts_ratios_tb)
+export(make_data_availability_text)
 export(make_dnsty_and_sctr_plt_title)
 export(make_ds_descvs_ls)
 export(make_ds_smry_ls)
 export(make_eq5d_ds_dict)
+export(make_ethics_text)
 export(make_fake_eq5d_ds)
 export(make_fake_ts_data)
 export(make_folds_ls)
+export(make_funding_text)
 export(make_header_yaml_args_ls)
 export(make_hlth_utl_and_predrs_ls)
 export(make_knit_pars_ls)
+export(make_lngl_ttu_r2_text)
+export(make_lngl_ttu_with_covars_text)
 export(make_maui_params_ls)
 export(make_mdl)
 export(make_mdl_coef_range_text)
@@ -81,6 +92,9 @@ export(make_random_forest_text)
 export(make_ranked_predrs_ls)
 export(make_results_ls)
 export(make_results_ls_spine)
+export(make_scaling_text)
+export(make_scndry_anlys_text)
+export(make_selected_mdl_text)
 export(make_shareable_mdl)
 export(make_smry_of_brm_mdl)
 export(make_smry_of_mdl_outp)
@@ -92,10 +106,10 @@ export(make_ten_fold_text)
 export(make_tfd_sngl_predr_mdls_tb)
 export(make_tfmn_cmprsn_plt)
 export(make_ttu_cs_ls)
-export(make_two_mdl_types_smry_tbl)
 export(make_uid_rename_lup)
 export(make_unique_ls_elmt_idx_int)
 export(make_valid_params_ls_ls)
+export(make_within_between_ratios_text)
 export(plot_auto_lm)
 export(plot_lnr_cmprsn)
 export(plot_obsd_predd_dnst)
@@ -109,6 +123,11 @@ export(predict_uncnstrd_utl)
 export(predict_utility)
 export(predict_utl_from_k10)
 export(print_all_plts_for_mdl_set)
+export(print_cohort_table)
+export(print_corls_tbl)
+export(print_covar_ttu_tbls)
+export(print_indpnt_predrs_coefs_tbl)
+export(print_ten_folds_tbl)
 export(print_ts_mdl_plts)
 export(randomise_changes_in_fct_levs)
 export(rename_from_nmd_vec)
@@ -202,6 +221,7 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,lag)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,mutate_all)
 importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
@@ -235,8 +255,14 @@ importFrom(ggplot2,xlim)
 importFrom(ggplot2,ylim)
 importFrom(here,here)
 importFrom(here,i_am)
+importFrom(kableExtra,add_header_above)
+importFrom(kableExtra,collapse_rows)
+importFrom(kableExtra,column_spec)
+importFrom(kableExtra,kable_styling)
+importFrom(kableExtra,kbl)
 importFrom(knitr,knit_child)
 importFrom(knitr,knit_expand)
+importFrom(knitr,opts_current)
 importFrom(lubridate,days)
 importFrom(magrittr,"%>%")
 importFrom(pacman,p_load)
@@ -273,6 +299,7 @@ importFrom(ready4class,update_pt_fn_args_ls)
 importFrom(ready4fun,get_from_lup_obj)
 importFrom(ready4show,make_paths_ls)
 importFrom(ready4show,make_rprt_type_ls)
+importFrom(ready4show,print_table)
 importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4use,get_fl_id_from_dv_ls)
