imprt of table title fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(make_cndt_predr_text)
 export(make_cohort_ls)
 export(make_coi_text)
 export(make_correlation_text)
+export(make_covar_ttu_tbl_title)
 export(make_covariates_text)
 export(make_cs_ts_ratios_tb)
 export(make_data_availability_text)
@@ -103,6 +104,7 @@ export(make_sngl_mdl_smry_tb)
 export(make_ss_tbls_ls)
 export(make_study_descs_ls)
 export(make_ten_fold_text)
+export(make_ten_folds_tbl_title)
 export(make_tfd_sngl_predr_mdls_tb)
 export(make_tfmn_cmprsn_plt)
 export(make_ttu_cs_ls)
