migrated in two fns from manuscript prog

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(get_scndry_anlys_descs)
 export(get_signft_covars)
 export(get_table_predn_mdl)
 export(is_TTU_predictors_lup)
+export(knit_from_tmpl)
 export(knit_mdl_rprt)
 export(make_all_mdl_types_smry_tbl)
 export(make_analysis_core_params_ls)
@@ -152,6 +153,7 @@ export(transform_paths_ls_for_scndry)
 export(transform_predd_var_nm)
 export(transform_predr_nm_part_of_phrases)
 export(transform_rprt_lup)
+export(transform_tb_for_merged_col_1)
 export(transform_tb_to_mdl_inp)
 export(transform_tbl_to_rnd_vars)
 export(transform_timepoint_vals)
