replaced phq9 and glm naming

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(knit_mdl_rprt)
 export(make_all_mdl_types_smry_tbl)
 export(make_analysis_core_params_ls)
 export(make_analysis_ds_smry_ls)
+export(make_bl_fup_add_to_row_ls)
 export(make_brms_mdl_print_ls)
 export(make_brms_mdl_smry_tbl)
 export(make_cmpst_sctr_and_dnsty_plt)
