all bar covars in descv fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,10 @@ export(get_ordered_sngl_csnl_mdls)
 export(get_popl_descvs)
 export(get_predr_ctgs)
 export(get_predrs_by_ctg)
+export(get_prefd_mdl_predrs)
 export(get_random_intercept)
 export(get_scndry_anlys_descs)
+export(get_selected_mixed_mdls)
 export(get_signft_covars)
 export(get_table_predn_mdl)
 export(is_TTU_predictors_lup)
@@ -47,6 +49,7 @@ export(make_cndt_predr_text)
 export(make_cohort_ls)
 export(make_coi_text)
 export(make_correlation_text)
+export(make_covar_ttu_tbl_refs)
 export(make_covar_ttu_tbl_title)
 export(make_covariates_text)
 export(make_cs_ts_ratios_tb)
@@ -62,6 +65,8 @@ export(make_folds_ls)
 export(make_funding_text)
 export(make_header_yaml_args_ls)
 export(make_hlth_utl_and_predrs_ls)
+export(make_indpnt_predrs_lngl_tbl_title)
+export(make_indpnt_predrs_lngl_tbls_ref)
 export(make_knit_pars_ls)
 export(make_lngl_ttu_r2_text)
 export(make_lngl_ttu_with_covars_text)
@@ -131,6 +136,8 @@ export(print_cohort_table)
 export(print_corls_tbl)
 export(print_covar_ttu_tbls)
 export(print_indpnt_predrs_coefs_tbl)
+export(print_indpnt_predrs_lngl_mdl_coefs)
+export(print_lngl_ttu_tbls)
 export(print_ten_folds_tbl)
 export(print_ts_mdl_plts)
 export(randomise_changes_in_fct_levs)
@@ -279,6 +286,7 @@ importFrom(purrr,flatten_chr)
 importFrom(purrr,flatten_dbl)
 importFrom(purrr,flatten_dfr)
 importFrom(purrr,flatten_int)
+importFrom(purrr,keep)
 importFrom(purrr,map)
 importFrom(purrr,map2)
 importFrom(purrr,map2_chr)
