reorganising main workflow fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ export(make_header_yaml_args_ls)
 export(make_hlth_utl_and_predrs_ls)
 export(make_indpnt_predrs_lngl_tbl_title)
 export(make_indpnt_predrs_lngl_tbls_ref)
+export(make_input_params)
 export(make_knit_pars_ls)
 export(make_lngl_ttu_r2_text)
 export(make_lngl_ttu_with_covars_text)
