--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(make_ranked_predrs_ls)
 export(make_results_ls)
 export(make_results_ls_spine)
 export(make_scaling_text)
+export(make_scndry_anlys_params)
 export(make_scndry_anlys_text)
 export(make_selected_mdl_text)
 export(make_shareable_mdl)
@@ -169,6 +170,7 @@ export(transform_timepoint_vals)
 export(transform_ts_mdl_data)
 export(transform_uid_var)
 export(validate_TTU_predictors_lup)
+export(write_analyses)
 export(write_box_cox_tfmn)
 export(write_main_oupt_dir)
 export(write_manuscript)
@@ -314,6 +316,7 @@ importFrom(ready4fun,get_from_lup_obj)
 importFrom(ready4show,make_paths_ls)
 importFrom(ready4show,make_rprt_type_ls)
 importFrom(ready4show,print_table)
+importFrom(ready4show,write_header_fls)
 importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4use,get_fl_id_from_dv_ls)
@@ -360,6 +363,7 @@ importFrom(tidyr,gather)
 importFrom(tidyselect,all_of)
 importFrom(utils,capture.output)
 importFrom(utils,data)
+importFrom(utils,unzip)
 importFrom(viridis,scale_fill_viridis)
 importFrom(xfun,numbers_to_words)
 importFrom(youthvars,make_final_rpln_ds_dict)
