added abstract default fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(get_table_predn_mdl)
 export(is_TTU_predictors_lup)
 export(knit_from_tmpl)
 export(knit_mdl_rprt)
+export(make_abstract_args_ls)
 export(make_all_mdl_types_smry_tbl)
 export(make_analysis_core_params_ls)
 export(make_analysis_ds_smry_ls)
