--- a/NAMESPACE
+++ b/NAMESPACE
@@ -155,7 +155,6 @@ export(transform_dict_with_rename_lup)
 export(transform_ds_for_all_cmprsn_plts)
 export(transform_ds_for_mdlng)
 export(transform_ds_to_predn_ds)
-export(transform_ds_with_rename_lup)
 export(transform_mdl_vars_with_clss)
 export(transform_names)
 export(transform_params_ls_from_lup)
@@ -164,7 +163,6 @@ export(transform_paths_ls_for_scndry)
 export(transform_predd_var_nm)
 export(transform_predr_nm_part_of_phrases)
 export(transform_rprt_lup)
-export(transform_tb_for_merged_col_1)
 export(transform_tb_to_mdl_inp)
 export(transform_tbl_to_rnd_vars)
 export(transform_timepoint_vals)
@@ -370,5 +368,7 @@ importFrom(xfun,numbers_to_words)
 importFrom(youthvars,make_final_rpln_ds_dict)
 importFrom(youthvars,make_tfd_repln_ds_dict_r3)
 importFrom(youthvars,transform_ds_for_tstng)
+importFrom(youthvars,transform_ds_with_rename_lup)
 importFrom(youthvars,transform_raw_ds_for_analysis)
+importFrom(youthvars,transform_tb_for_merged_col_1)
 importFrom(youthvars,write_all_outp_dirs)
