--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,9 +1,11 @@
 home:
   links:
   - text: User manual (PDF)
-    href: https://github.com/ready4-dev/TTU/files/6277705/TTU_user_0.0.0.9133.pdf
+    href: https://github.com/ready4-dev/TTU/files/6936649/TTU_0.0.0.9311_user.pdf
   - text: Developer version of usual manual (PDF)
-    href: https://github.com/ready4-dev/TTU/files/6277710/TTU_developer_0.0.0.9133.pdf
+    href: https://github.com/ready4-dev/TTU/releases/download/v0.9311/TTU_0.0.0.9311_developer.pdf
+  - text: Project website
+    href: https://www.ready4-dev.com/
   - text: Project website
     href: https://www.ready4-dev.com/
 development:
