edits to manuscript fns and composite plot fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(transform_ds_for_mdlng)
 export(transform_ds_to_predn_ds)
 export(transform_mdl_vars_with_clss)
 export(transform_names)
+export(transform_nms_in_mdl_tbl)
 export(transform_params_ls_from_lup)
 export(transform_params_ls_to_valid)
 export(transform_paths_ls_for_scndry)
@@ -202,6 +203,7 @@ export(write_ts_mdls)
 export(write_ts_mdls_from_alg_outp)
 import(methods)
 importFrom(Boruta,Boruta)
+importFrom(DescTools,SplitPath)
 importFrom(Hmisc,capitalize)
 importFrom(Hmisc,label)
 importFrom(Hmisc,latexTranslate)
