added getting started info

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ importFrom(cowplot,draw_image)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
 importFrom(cowplot,save_plot)
+importFrom(dataverse,add_dataset_file)
 importFrom(dataverse,get_dataset)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
