--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Transfer to Utility Mapping Algorithm Toolkit
-Version: 0.0.0.9318
+Version: 0.0.0.9319
 Authors@R: c(
     person("Caroline", "Gao", , "caroline.gao@orygen.org.au", role = "aut",
            comment = c(ORCID = "0000-0002-0987-2759")),
@@ -74,6 +74,7 @@ Imports:
     youthvars (>= 0.0.0.9070)
 VignetteBuilder: knitr
 Depends: 
+    ggfortify,
     eq5d,
     R (>= 2.10)
 Remotes: 
