--- a/NAMESPACE
+++ b/NAMESPACE
@@ -320,6 +320,7 @@ importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4fun,get_fl_id_from_dv_ls)
 importFrom(ready4fun,get_from_lup_obj)
+importFrom(ready4fun,get_rds_from_dv)
 importFrom(ready4fun,update_pt_fn_args_ls)
 importFrom(ready4show,make_paths_ls)
 importFrom(ready4show,make_rprt_type_ls)
