redo with significantly modified dpcys

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,9 +1,9 @@
 home:
   links:
   - text: Manual - User (PDF)
-    href: https://dataverse.harvard.edu/api/access/datafile/5254608
+    href: https://github.com/ready4-dev/TTU/releases/download/Documentation_0.0/TTU_User.pdf
   - text: Manual - Developer (PDF)
-    href: https://dataverse.harvard.edu/api/access/datafile/5254607
+    href: https://github.com/ready4-dev/TTU/releases/download/Documentation_0.0/TTU_Developer.pdf
   - text: Project website
     href:  https://ready4-dev.github.io/ready4/
 development:
@@ -14,7 +14,7 @@ reference:
   - mdl_types_lup
   - plt_types_lup
   - rprt_lup
-- title: "Classes"
+- title: "S3 Classes"
 - contents:
   - TTU_predictors_lup
 - title: "Functions"
