--- a/NAMESPACE
+++ b/NAMESPACE
@@ -318,10 +318,11 @@ importFrom(purrr,walk)
 importFrom(purrr,walk2)
 importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
-importFrom(ready4fun,get_fl_id_from_dv_ls)
-importFrom(ready4fun,get_from_lup_obj)
-importFrom(ready4fun,get_rds_from_dv)
-importFrom(ready4fun,update_pt_fn_args_ls)
+importFrom(ready4,get_fl_id_from_dv_ls)
+importFrom(ready4,get_from_lup_obj)
+importFrom(ready4,get_rds_from_dv)
+importFrom(ready4,update_pt_fn_args_ls)
+importFrom(ready4,write_to_dv_with_wait)
 importFrom(ready4show,make_paths_ls)
 importFrom(ready4show,make_rprt_type_ls)
 importFrom(ready4show,print_table)
@@ -330,7 +331,6 @@ importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4use,make_pt_ready4use_dictionary)
 importFrom(ready4use,remove_labels_from_ds)
-importFrom(ready4use,write_fls_to_dv_ds)
 importFrom(rlang,exec)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
