fix of pkg dpcys

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,8 +76,10 @@ Depends:
     scorz,
     specific
 LazyData: true
-Remotes: 
+Remotes:  
     ready4-dev/ready4,
     ready4-dev/ready4show,
     ready4-dev/ready4use,
-    ready4-dev/youthvars
+    ready4-dev/youthvars,
+    ready4-dev/scorz,
+    ready4-dev/specific
