modified tfmn fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -316,7 +316,7 @@ importFrom(randomForest,randomForest)
 importFrom(randomForest,varImpPlot)
 importFrom(ready4,get_fl_id_from_dv_ls)
 importFrom(ready4,get_from_lup_obj)
-importFrom(ready4,get_rds_from_dv)
+importFrom(ready4,ingest)
 importFrom(ready4,write_to_dv_with_wait)
 importFrom(ready4show,make_output_format_ls)
 importFrom(ready4show,make_path_params_ls)
@@ -330,6 +330,7 @@ importFrom(ready4show,write_mdl_plt_fl)
 importFrom(ready4show,write_report)
 importFrom(ready4show,write_rprt_from_tmpl)
 importFrom(ready4show,write_rprt_with_rcrd)
+importFrom(ready4use,Ready4useRepos)
 importFrom(ready4use,make_pt_ready4use_dictionary)
 importFrom(ready4use,remove_labels_from_ds)
 importFrom(rlang,exec)
