--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Implement Transfer to Utility Mapping Algorithms
-Version: 0.0.0.9326
+Version: 0.0.0.9327
 Authors@R: c(
     person("Caroline", "Gao", , "caroline.gao@orygen.org.au", role = "aut",
            comment = c(ORCID = "0000-0002-0987-2759")),
@@ -52,8 +52,8 @@ Imports:
     psych,
     purrr,
     randomForest,
-    ready4show (>= 0.0.0.9085),
-    ready4use (>= 0.0.0.9217),
+    ready4show (>= 0.0.0.9086),
+    ready4use (>= 0.0.0.9218),
     rlang,
     rmarkdown,
     stats,
@@ -67,7 +67,7 @@ Imports:
     utils,
     viridis,
     xfun,
-    youthvars (>= 0.0.0.9100)
+    youthvars (>= 0.0.0.9101)
 VignetteBuilder: knitr
 Depends: 
     ready4,
@@ -76,10 +76,8 @@ Depends:
     scorz,
     specific
 LazyData: true
-Remotes:  
+Remotes: 
     ready4-dev/ready4,
     ready4-dev/ready4show,
     ready4-dev/ready4use,
-    ready4-dev/youthvars,
-    ready4-dev/scorz,
-    ready4-dev/specific
+    ready4-dev/youthvars
