--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,18 +66,20 @@ Imports:
     tidyselect,
     utils,
     viridis,
-    xfun,
-    youthvars (>= 0.0.0.9101)
+    xfun
 VignetteBuilder: knitr
 Depends: 
-    ready4,
+    ready4 (>= 0.0.0.9084),
     ggfortify,
     R (>= 2.10),
-    scorz,
-    specific
+    scorz (>= 0.0.0.9044),
+    specific (>= 0.0.0.9036),
+    youthvars (>= 0.0.0.9101)
 LazyData: true
-Remotes: 
+Remotes:  
     ready4-dev/ready4,
     ready4-dev/ready4show,
     ready4-dev/ready4use,
-    ready4-dev/youthvars
+    ready4-dev/youthvars,
+    ready4-dev/scorz,
+    ready4-dev/specific
