--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Implement Transfer to Utility Mapping Algorithms
-Version: 0.0.0.9333
+Version: 0.0.0.9334
 Authors@R: c(
     person("Caroline", "Gao", , "caroline.gao@orygen.org.au", role = "aut",
            comment = c(ORCID = "0000-0002-0987-2759")),
@@ -30,15 +30,12 @@ Imports:
     lifecycle,
     magrittr,
     methods,
+    ready4 (>= 0.0.0.9089),
     ready4show (>= 0.0.0.9095),
     testthat
 VignetteBuilder: knitr
 Depends: 
-    ready4,
-    ggfortify,
-    R (>= 2.10),
-    scorz,
-    specific
+    R (>= 2.10)
 LazyData: true
 Suggests: 
     rmarkdown
