--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Implement Transfer to Utility Mapping Algorithms
-Version: 0.0.0.9334
+Version: 0.0.0.9335
 Authors@R: c(
     person("Caroline", "Gao", , "caroline.gao@orygen.org.au", role = "aut",
            comment = c(ORCID = "0000-0002-0987-2759")),
@@ -32,6 +32,7 @@ Imports:
     methods,
     ready4 (>= 0.0.0.9089),
     ready4show (>= 0.0.0.9095),
+    specific,
     testthat
 VignetteBuilder: knitr
 Depends: 
