--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ Imports:
     methods,
     ready4 (>= 0.0.0.9089),
     ready4show (>= 0.0.0.9095),
-    specific,
+    specific (>= 0.0.0.9078),
     testthat
 VignetteBuilder: knitr
 Depends: 
@@ -42,4 +42,5 @@ Suggests:
     rmarkdown
 Remotes: 
     ready4-dev/ready4,
-    ready4-dev/ready4show
+    ready4-dev/ready4show,
+    ready4-dev/specific
