--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,29 @@
 
 export("%>%")
 export(TTUReports)
+export(TTUSynopsis)
 export(deprecated)
+export(get_pkg_citation)
 export(make_report_fl_nms_ls)
 exportClasses(TTUReports)
+exportClasses(TTUSynopsis)
 exportMethods(author)
 import(methods)
 import(ready4)
+import(specific)
+importFrom(dplyr,mutate)
+importFrom(ggplot2,ggsave)
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
+importFrom(purrr,discard)
+importFrom(purrr,flatten_chr)
+importFrom(purrr,map)
+importFrom(purrr,map_chr)
+importFrom(purrr,pluck)
+importFrom(purrr,reduce)
 importFrom(ready4,author)
 importFrom(ready4show,make_rmd_fl_nms_ls)
+importFrom(stringr,str_locate)
+importFrom(stringr,str_replace_all)
+importFrom(stringr,str_sub)
+importFrom(utils,packageDescription)
