--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Implement Transfer to Utility Mapping Algorithms
-Version: 0.0.0.9339
+Version: 0.0.0.9341
 Authors@R: c(
     person("Caroline", "Gao", , "caroline.gao@orygen.org.au", role = "aut",
            comment = c(ORCID = "0000-0002-0987-2759")),
@@ -21,7 +21,7 @@ URL: https://ready4-dev.github.io/TTU/, https://github.com/ready4-dev/TTU,
     https://ready4-dev.github.io/ready4/
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
 Imports: 
     betareg,
     caret,
@@ -33,9 +33,9 @@ Imports:
     magrittr,
     methods,
     purrr,
-    ready4 (>= 0.0.0.9089),
-    ready4show (>= 0.0.0.9095),
-    specific (>= 0.0.0.9080),
+    ready4 (>= 0.0.0.9092),
+    ready4show (>= 0.0.0.9096),
+    specific (>= 0.0.0.9081),
     stringr,
     testthat,
     utils
@@ -44,6 +44,7 @@ Depends:
     R (>= 2.10)
 LazyData: true
 Collate: 
+    'C4_TTUParameters.R'
     'C4_TTUSynopsis.R'
     'C4_TTUReports.R'
     'TTU-package.R'
