redo with faulty program dpcys

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ importFrom(purrr,map_chr)
 importFrom(purrr,pluck)
 importFrom(purrr,reduce)
 importFrom(ready4,author)
+importFrom(ready4,make_list_phrase)
+importFrom(ready4,write_with_consent)
 importFrom(ready4show,make_rmd_fl_nms_ls)
 importFrom(stringr,str_locate)
 importFrom(stringr,str_replace_all)
