--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,7 @@ Imports:
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10),
-    specific
+    specific (>= 0.0.0.9094)
 LazyData: true
 Collate: 
     'C4_TTUSynopsis.R'
