--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
-Title: Implement Transfer to Utility Mapping Algorithms with Ready4
-Version: 0.0.0.9351
+Title: Implement Transfer to Utility Mapping Algorithms
+Version: 0.0.0.9352
 Authors@R: c(
     person("Caroline", "Gao", , "caroline.gao@orygen.org.au", role = "aut",
            comment = c(ORCID = "0000-0002-0987-2759")),
@@ -31,14 +31,14 @@ Imports:
     methods,
     purrr,
     ready4 (>= 0.0.0.9117),
-    ready4show (>= 0.0.0.9107),
+    ready4show (>= 0.0.0.9108),
     stringr,
     testthat,
     utils
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10),
-    specific (>= 0.0.0.9094)
+    specific
 LazyData: true
 Collate: 
     'C4_TTUSynopsis.R'
