--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: TTU
 Title: Implement Transfer to Utility Mapping Algorithms
-Version: 0.0.0.9352
+Version: 0.0.0.9353
 Authors@R: c(
     person("Caroline", "Gao", , "caroline.gao@orygen.org.au", role = "aut",
            comment = c(ORCID = "0000-0002-0987-2759")),
@@ -31,15 +31,14 @@ Imports:
     methods,
     purrr,
     ready4 (>= 0.0.0.9117),
-    ready4show (>= 0.0.0.9108),
+    ready4show (>= 0.0.0.9109),
     stringr,
     testthat,
     utils
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10),
-    scorz (>= 0.0.0.9058),
-    specific (>= 0.0.0.9095)
+    specific
 LazyData: true
 Collate: 
     'C4_TTUSynopsis.R'
@@ -59,11 +58,8 @@ Suggests:
     betareg,
     caret,
     knitrBootstrap,
-    rmarkdown,
-    youthvars (>= 0.0.0.9120)
+    rmarkdown
 Remotes: 
     ready4-dev/ready4,
     ready4-dev/ready4show,
-    ready4-dev/specific,
-    ready4-dev/youthvars,
-    ready4-dev/scorz
+    ready4-dev/specific
