--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,7 +38,8 @@ Imports:
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10),
-    specific
+    scorz (>= 0.0.0.9058),
+    specific (>= 0.0.0.9097)
 LazyData: true
 Collate: 
     'C4_TTUSynopsis.R'
@@ -58,8 +59,11 @@ Suggests:
     betareg,
     caret,
     knitrBootstrap,
-    rmarkdown
+    rmarkdown,
+    youthvars (>= 0.0.0.9120)
 Remotes: 
     ready4-dev/ready4,
     ready4-dev/ready4show,
-    ready4-dev/specific
+    ready4-dev/specific,
+    ready4-dev/youthvars,
+    ready4-dev/scorz
